Fix overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -100,8 +100,8 @@ h2 {
     position: relative;
     display: grid;
     place-items: center;
-    width: 20rem;
-    height: 300px;
+    width: 15rem;
+    height: 15rem;
     border-radius: 0.5rem;
     overflow: hidden;
     span {
